--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.5",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.4.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.2.1",
